@@ -27,6 +27,7 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    jvmArgs '-Dnet.bytebuddy.experimental=true'
 }
 
 jacoco {
